@@ -1,3 +1,5 @@
 
 #define KEY_ROOT "HKEY_LOCAL_MACHINE\\SOFTWARE\\MakeSweet\\VidMod;Root"
 
+#define KEY_NEW_ROOT "HKEY_LOCAL_MACHINE\\SOFTWARE\\MakeSweet\\ucanvcam"
+
