@@ -1,3 +1,7 @@
+2008-04-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* CMakeLists.txt: improved NSIS packaging, version bump.
+
 2008-04-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* CMakeLists.txt: version bump, windows build actually works
